# video-compression-latency-benchmarks

./: .gitignore  README.md  TODO.txt
0_preparatory_operations/: 0_install_linux_dependencies_ubuntu.sh  0_linux_dependencies.txt  1.0_obtain_video_material.txt  1.0_obtain_video_material_linux.sh  1.0_obtain_video_material_windows.ps1  1.1_process_video_material.txt  1.1_process_video_material_linux.sh  1.1_process_video_material_windows.ps1  2.0_download_libraries.txt  2.0_download_libraries_linux.sh  2.1_build_libraries.txt  2.1_build_libraries_linux.sh  2.2_install_libraries_linux.sh  wget-log
0_preparatory_operations/patches/: vc2-hq-decode_configure.ac_patch  vc2-hq-encode_configure.ac_patch  vc2-reference_configure.ac_patch
3_benchmarks/: bench_all_ffmpeg.sh  comp_cmd.txt  gpujpeg_mjpeg.sh  jpegturbo_mjpeg.sh  nvjpeg_mjpeg.sh
3_benchmarks/src/: img_utils.h  libjpeg_decode.c  libjpeg_encode.c
3_benchmarks/src/av1_nvenc/: CMakeLists.txt  av1_nvenc_encode.c
3_benchmarks/src/benchmark_scripts/: benchmark_common.py  download_RAISE_imageset.py  requirements.txt
3_benchmarks/src/benchmark_scripts/exebench/: benchmark_aom_LoLa.py  benchmark_aom_complete.py  benchmark_common.py  benchmark_gpujpeg_LoLa.py  benchmark_gpujpeg_complete.py  benchmark_libavif_LoLa.py  benchmark_libavif_complete.py  benchmark_libjpeg-turbo_LoLa.py  benchmark_libjpeg-turbo_complete.py  benchmark_libjpeg.ipynb  benchmark_libwebp_LoLa.py  benchmark_libwebp_complete.py  benchmark_memory.py  benchmark_nvjpeg+jpeggpu_LoLa.py  benchmark_nvjpeg+jpeggpu_complete.py  benchmark_nvjpeg2k_LoLa.py  benchmark_nvjpeg2k_complete.py  benchmark_nvjpeg_LoLa.py  benchmark_nvjpeg_complete.py  results_aom_LoLa.csv  results_gpujpeg_complete.csv  results_libavif_LoLa.csv  results_libjpeg-turbo_complete.csv  results_libwebp_LoLa.csv  results_memory.csv  results_nvjpeg_complete.csv  viz_gpujpeg.ipynb  viz_gpujpeg_LoLa.ipynb  viz_libjpeg-turbo.ipynb  viz_libjpeg-turbo_LoLa.ipynb  viz_memory.ipynb  viz_nvjpeg+jpeggpu.ipynb  viz_nvjpeg+jpeggpu_LoLa.ipynb  viz_nvjpeg.ipynb  viz_nvjpeg_LoLa.ipynb
3_benchmarks/src/gpubandwidth/: build.sh  transfer_bench.cu
3_benchmarks/src/gpujpeg/: CMakeLists.txt  benchmark_decode.c  benchmark_encode.c  gpujpeg_decode.c  gpujpeg_decode.cpp  gpujpeg_encode.c  gpujpeg_encode.cpp  gpujpeg_test.cpp
3_benchmarks/src/h264_nvenc/: CMakeLists.txt  h264nvenc_encode_device.c  h264nvenc_encode_host.c
3_benchmarks/src/h264_qsv/: CMakeLists.txt  h264qsv_encode_device.c  h264qsv_encode_host.c  results_multithread.txt
3_benchmarks/src/jpegli/: CMakeLists.txt  jpegli_decode.c  jpegli_encode.c
3_benchmarks/src/libaom-av1/: CMakeLists.txt  libaom-av1_encode.c
3_benchmarks/src/libavif/: CMakeLists.txt  libavif_decode.cpp  libavif_encode.cpp
3_benchmarks/src/libjpeg/: CMakeLists.txt  benchmark_decode.c  benchmark_encode.c  libjpeg_decode.c  libjpeg_encode.c
3_benchmarks/src/libjpeg-turbo/: CMakeLists.txt  libjpeg-turbo_decode.c  libjpeg-turbo_encode.c
3_benchmarks/src/librav1e/: CMakeLists.txt  librav1e_encode.c
3_benchmarks/src/libsvt-av1/: CMakeLists.txt  libsvt-av1_encode.c
3_benchmarks/src/libvpx-vp8/: CMakeLists.txt  libvpx-vp8_decode.c  libvpx-vp8_decode_native.c  libvpx-vp8_encode.c
3_benchmarks/src/libvpx-vp9/: CMakeLists.txt  libvpx-vp9_encode.c
3_benchmarks/src/libwebp/: CMakeLists.txt  libwebp_decode.c  libwebp_encode.c
3_benchmarks/src/nvjpeg/: CMakeLists.txt  benchmark_decode.c  benchmark_decode.cpp  benchmark_encode.c  benchmark_encode.cpp  nvjpeg_decode.c  nvjpeg_decode.cpp  nvjpeg_encode.c  nvjpeg_encode.cpp  nvjpeg_test.cpp
3_benchmarks/src/nvjpeg2k/: CMakeLists.txt  nvjpeg2k_decode.cpp  nvjpeg2k_encode.cpp  nvjpeg2k_test.cpp
3_benchmarks/src/x264/: CMakeLists.txt  x264_encode.c  x264_encode_native.c
